# akonadi-import-wizard

./: .craft.ini  .git-blame-ignore-revs  .gitlab-ci.yml  .kde-ci.yml  .krazy  .pre-commit-config.yaml  CMakeLists.txt  importwizard.categories  importwizard.renamecategories
src/: CMakeLists.txt  Messages.sh  TODO  importmailpluginmanager.cpp  importmailpluginmanager.h  importwizard-version.h.cmake  importwizard.cpp  importwizard.h  importwizarddisplayinfo.cpp  importwizarddisplayinfo.h  importwizardkernel.cpp  importwizardkernel.h  libimportwizard_private_export.h  main.cpp
src/abstract/: abstractaddressbook.cpp  abstractaddressbook.h  abstractbase.cpp  abstractbase.h  abstractcalendar.cpp  abstractcalendar.h  abstractdisplayinfo.cpp  abstractdisplayinfo.h  abstractimporter.cpp  abstractimporter.h  abstractsettings.cpp  abstractsettings.h
src/autodetect/: CMakeLists.txt  abstractaddressbook.cpp  abstractaddressbook.h  abstractbase.cpp  abstractbase.h  abstractcalendar.cpp  abstractcalendar.h  abstractimporter.cpp  abstractimporter.h  abstractsettings.cpp  abstractsettings.h  importaddressbookpage.cpp  importaddressbookpage.h  importcalendarpage.cpp  importcalendarpage.h  importfilterinfogui.cpp  importfilterinfogui.h  importfilterpage.cpp  importfilterpage.h  importfinishpage.cpp  importfinishpage.h  importmailpage.cpp  importmailpage.h  importsettingpage.cpp  importsettingpage.h  importwizardutil.cpp  importwizardutil.h  selectcomponentpage.cpp  selectcomponentpage.h  selectprogrampage.cpp  selectprogrampage.h
src/autodetect/balsa/: CMakeLists.txt  balsaaddressbook.cpp  balsaaddressbook.h  balsaimportdata.cpp  balsaimportdata.h  balsaimporter.json  balsasettings.cpp  balsasettings.h
src/autodetect/claws-mail/: CMakeLists.txt  clawsmailaddressbook.cpp  clawsmailaddressbook.h  clawsmailimportdata.cpp  clawsmailimportdata.h  clawsmailimporter.json  clawsmailsettings.cpp  clawsmailsettings.h
src/autodetect/evolutionv1/: CMakeLists.txt  evolutionv1importdata.cpp  evolutionv1importdata.h
src/autodetect/evolutionv2/: evolutionv2importdata.cpp  evolutionv2importdata.h
src/autodetect/evolutionv3/: CMakeLists.txt  evolutionaddressbook.cpp  evolutionaddressbook.h  evolutioncalendar.cpp  evolutionsettings.cpp  evolutionsettings.h  evolutionutil.cpp  evolutionutil.h  evolutionv3importdata.cpp  evolutionv3importdata.h  evolutionv3importer.json
src/autodetect/geary/: CMakeLists.txt  gearyaddressbook.cpp  gearyaddressbook.h  gearyimportdata.cpp  gearyimportdata.h  gearyimporter.json  gearysettings.cpp  gearysettings.h
src/autodetect/icedove/: CMakeLists.txt  icedoveimportdata.cpp  icedoveimportdata.h  icedoveimporter.json
src/autodetect/mailapp/: mailappimportdata.cpp  mailappimportdata.h
src/autodetect/oe/: oeimportdata.cpp  oeimportdata.h
src/autodetect/opera/: CMakeLists.txt  operaaddressbook.cpp  operaaddressbook.h  operaimportdata.cpp  operaimportdata.h  operasettings.cpp  operasettings.h
src/autodetect/pmail/: pmailimportdata.cpp  pmailimportdata.h  pmailsettings.cpp  pmailsettings.h
src/autodetect/sylpheed/: CMakeLists.txt  sylpheedaddressbook.cpp  sylpheedaddressbook.h  sylpheedimportdata.cpp  sylpheedimportdata.h  sylpheedimporter.json  sylpheedsettings.cpp  sylpheedsettingsutils.cpp  sylpheedsettingsutils.h
src/autodetect/thebat/: thebatimportdata.cpp  thebatimportdata.h
src/autodetect/thunderbird/: CMakeLists.txt  thunderbirdaddressbook.cpp  thunderbirdaddressbook.h  thunderbirdimportdata.cpp  thunderbirdimportdata.h  thunderbirdimporter.json  thunderbirdsettings.cpp  thunderbirdsettings.h
src/autodetect/trojita/: CMakeLists.txt  trojitaaddressbook.cpp  trojitaaddressbook.h  trojitaimportdata.cpp  trojitaimportdata.h  trojitaimporter.json  trojitasettings.cpp  trojitasettings.h
src/autodetect/widgets/: selectprogramlistwidget.cpp  selectprogramlistwidget.h
src/data/: org.kde.akonadiimportwizard.desktop  org.kde.importwizard.desktop
src/libimportwizard/: CMakeLists.txt  KPimImportWizardConfig.cmake.in  abstractaddressbook.cpp  abstractaddressbook.h  abstractbase.cpp  abstractbase.h  abstractcalendar.cpp  abstractcalendar.h  abstractdisplayinfo.cpp  abstractdisplayinfo.h  abstractimporter.cpp  abstractimporter.h  abstractsettings.cpp  abstractsettings.h  importwizardsavepasswordjob.cpp  importwizardsavepasswordjob.h  importwizardutil.cpp  importwizardutil.h
src/manual/: importwizardfilterinfogui.cpp  importwizardfilterinfogui.h  manualimportmailpage.cpp  manualimportmailpage.h  manualselectfilterpage.cpp  manualselectfilterpage.h
src/manual/pics/: CMakeLists.txt
src/plugins/: CMakeLists.txt
src/plugins/balsa/: CMakeLists.txt  balsaaddressbook.cpp  balsaaddressbook.h  balsaimportdata.cpp  balsaimportdata.h  balsaimporter.json  balsasettings.cpp  balsasettings.h
src/plugins/claws-mail/: CMakeLists.txt  clawsmailaddressbook.cpp  clawsmailaddressbook.h  clawsmailimportdata.cpp  clawsmailimportdata.h  clawsmailimporter.json  clawsmailsettings.cpp  clawsmailsettings.h
src/plugins/evolutionv1/: CMakeLists.txt  evolutionv1importdata.cpp  evolutionv1importdata.h
src/plugins/evolutionv2/: CMakeLists.txt  evolutionv2importdata.cpp  evolutionv2importdata.h
src/plugins/evolutionv3/: CMakeLists.txt  evolutionaddressbook.cpp  evolutionaddressbook.h  evolutioncalendar.cpp  evolutioncalendar.h  evolutionsettings.cpp  evolutionsettings.h  evolutionutil.cpp  evolutionutil.h  evolutionv3importdata.cpp  evolutionv3importdata.h  evolutionv3importer.json
src/plugins/geary/: CMakeLists.txt  gearyaddressbook.cpp  gearyaddressbook.h  gearyimportdata.cpp  gearyimportdata.h  gearysettings.cpp  gearysettings.h
src/plugins/icedove/: CMakeLists.txt  icedoveimportdata.cpp  icedoveimportdata.h  icedoveimporter.json
src/plugins/mailapp/: CMakeLists.txt  mailappimportdata.cpp  mailappimportdata.h
src/plugins/oe/: CMakeLists.txt  oeimportdata.cpp  oeimportdata.h
src/plugins/opera/: CMakeLists.txt  operaaddressbook.cpp  operaaddressbook.h  operaimportdata.cpp  operaimportdata.h  operasettings.cpp  operasettings.h
src/plugins/pmail/: CMakeLists.txt  (+4 more)
(+112 files in other folders)
