add_subdirectory(geary)
add_subdirectory(trojita)
add_subdirectory(opera)
add_subdirectory(mailapp)
add_subdirectory(pmail)
add_subdirectory(balsa)
add_subdirectory(evolutionv1)
add_subdirectory(evolutionv2)
add_subdirectory(evolutionv3)
add_subdirectory(oe)
add_subdirectory(thebat)
add_subdirectory(sylpheed)
add_subdirectory(claws-mail)

